Avoid jumping buttons on :active.
WordPress has a transform rule which moves the button by 1px on :active.

--- a/css/src/file.css
+++ b/css/src/file.css
@@ -117,7 +117,8 @@
 	display: none !important; 
 }
 
-.cmb-file-wrap .cmb-file-upload { 
+.cmb-file-wrap .cmb-file-upload,
+.cmb-file-wrap .cmb-file-upload:active { /* Include :active because WP uses translateY(1px) */
 	position: relative;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
